--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<packaging>war</packaging>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<finalName>RailwayOnlineSystem</finalName>
 		<resources>
 			<resource>
 				<directory>src</directory>
