BookingServiceImpl and html files modified and committed

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 	</build>
 	<dependencies>
 
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.5</version>
+      </dependency>
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
